@@ -14,25 +14,25 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 
 SHA1 3fde6bf8ec485487d8ba7d02ed2cecb549bfb969 BUGS
-SHA1 5d15386627f19796102c4edb443f8dc59250f402 CHANGES
+SHA1 03efb3753650fcad6d0a2dbaa36801d11883ea29 CHANGES
 SHA1 9562bac6f49b6c4366dc946c1567e07e63b68f94 CREDITS
 SHA1 d6a6c30ee6d9ba6b9afab8bbf6a25e1b23c744e0 LICENSE
 SHA1 c19282d80fdda45077ce4a8539b3078ef534ec9e MANIFEST
-SHA1 2ec7997646883426dbff39236cd3cde65dc57dad META.yml
-SHA1 35e31c6c53d9e6e16359ba18f1a4039b36558ecc Makefile.PL
-SHA1 9b2bb75eb931e31c3d2e2611a9d884a4b7600bec NEW
+SHA1 e8ac20b7c292748ca08b4a128889b649757f53b5 META.yml
+SHA1 3a0725c7f91b4ac17ef79391d0e4460dcae4e616 Makefile.PL
+SHA1 409e57501c213a908fa6e8aea71a9ec5052abc1b NEW
 SHA1 f9c04a00e086e6039d484a8a048522a9a7db57de README
 SHA1 0421d037bd415034320314cb4535d78b3841631e TODO
-SHA1 8508ee52479f09d0e3674cc9ac7f5b57c1d2555d lib/Mail/Graph.pm
-SHA1 d2a2721254560014ab265cbc2d27d928ebd64400 samples/archive/sample.txt.gz
-SHA1 e90477fe4f2ec67971a7511a22e29fac0e6d9790 samples/archive/sample2.txt.gz
-SHA1 8939cf4abefc5ccdf68470348e5e9683bd1f06fb samples/convert.pl
+SHA1 bf62b17888cc0578337ba2320c512504d29becd1 lib/Mail/Graph.pm
+SHA1 552a0de189eb787984dec5426ebda13d04558704 samples/archive/sample.txt.gz
+SHA1 84dbf70f4dab31029599c962fb6e809530d0a011 samples/archive/sample2.txt.gz
+SHA1 41f928aa44f806c2b250ec9ef95558967649fd4c samples/convert.pl
 SHA1 6f2a20b2c0ef8d2a6a0d7d64278cfb699dd2b8fd samples/index.tpl
-SHA1 4a645a7965d9458042988156baa61ad6752e5e52 samples/index/dummy.txt
+SHA1 da39a3ee5e6b4b0d3255bfef95601890afd80709 samples/index/dummy.txt
 SHA1 59c16d247fba14535baceec8e4fd88ccd99e981e samples/output/spam.css
 SHA1 3c08ff8e64883c8aeb2b24e205915c22f8de3b2d samples/output/w3c.png
-SHA1 07f06e1d973f20222e556e68baff6670407e718d samples/sample.pl
-SHA1 34377697c5164b02aff041c08478bd7865abc788 t/mailgraph.t
+SHA1 0294f6bdd09a47da855c53394de178b373da7ca8 samples/sample.pl
+SHA1 a21646cf02e927ecc2e3d6e2bd2b0aaff3967765 t/mailgraph.t
 SHA1 04179f69ce3c9e81a9828a692f6441b11e4c7c9b t/target.t
 SHA1 2a921a86ead45b3afa24038b19a723b629121c41 t/testmail.1
 SHA1 5101f7c1da21829abca1e5737c72817639accca2 t/testmail.2
@@ -42,11 +42,11 @@ SHA1 5fa65493848528d899a71079fd4e0595b5c95c32 t/testmail.4
 Version: GnuPG v1.2.2-rc1-SuSE (GNU/Linux)
 Comment: When cryptography is outlawed, bayl bhgynjf jvyy unir cevinpl.
 
-iQEVAwUBP6UBancLPEOTuEwVAQFA+gf8CtpCSQl+Ztd3i+GuGK+7S5FfCx2qWA+k
-dGyuZizoGMeJsP2QR9t8oYDvE52G/ZdW4R1b7y++X+JfpynYaBE4Z86lEHONLzDQ
-F+/89TWWCoM6SmmNhDxIjcyJ5CpeYHL6q7EpEFAg5WGxf6EVvOsam+9WvXJ8IvaP
-4jtpyWa4asi1vqDPx4UM2KJ4msRuX2nMQDnA9y7usgEziJ57jVVHkZuoH7aKUU7V
-qYZ+FjjYnftsM6oXeTU1k90XyRhQo30FNfeYxj40VLAvS0jkAunD9NVWXtMo6n9B
-5nnRYzNWygEpMAtevEbmALV3muNXIcvt8kmEBIfJH2SkRTJhNtCzeg==
-=7MdY
+iQEVAwUBP/gTF3cLPEOTuEwVAQFhNgf+IxPWsH8vN3Gm1lcbmi1Kaxs8xMLULRUs
+scgRjVBl6DIJ6k7tRz1SCZgskgShaqO6IGph9CmYVTCLFwSf7vxhwRHpXzE7xs58
+hrMRgumI9aQJo9FGWFx9nSEmXF7hiif9XcwCFUqGJKhNsAiEGSC6CqTxrhf3v4Qx
+Q2I95q+Ik9YT2cddklzmrll2c3ElWDLGtK0m6DzH2NLFGAmoMtxoUN3i+ERA61vW
+b46LKx1R/mMoh2T3k8MvG467mn2zOl8/L8NDc5YzLpylMKYWaFH+kmY1CrldlNSg
+jDUQmMymXtrzdSkATUiuRF8Q2qhuWtiAG9WoGVKz26MHH5Puw7w96w==
+=50zw
 -----END PGP SIGNATURE-----
