@@ -1,1 +1,0 @@
-make dist should pick up this dir
